@@ -4,6 +4,7 @@ Environment:
 ISO:
 - updated ISO grub config
 - limit memory to 4G in UEFI MIX MODE to avoid NX issue
+- switched to build ISO grub during image assembling
 manage:
 - switched to kexec autodetection of supported mode
 ---
